# cmasfo

./: .bashrc  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  index.html  init.sh  rust.md  rustfmt.toml  setup.sh  vcpkg.json  vercel.json  why-rust.md
.cmake/: config.cmake
.obsidian/: app.json  community-plugins.json
.utils/: cargo.sh  clang++.sh  clang.sh  cmake.sh  commit.sh  g++.sh  gcc.sh  rustc.sh  sync.sh
_docs/: README.md
_misc/: README.md
cmf/: Cargo.toml
cmf-dev/: Cargo.toml
code/rs/: hello_io.rs
docs/: README.md  _.md  en.md  en_us.md  ja_jp.md  ko.md  ko_kr.md  zh_cn.md
docs/.obsidian/: app.json  community-plugins.json  templates.json
docs/_attachments/: README.md
docs/_documents_guideline/: README.md
docs/_exclusive/: README.md
docs/_homepages/: en_us.md  ja_jp.md  ko_kr.md  zh_cn.md  zh_tw.md
docs/_repository_structure/: README.md
docs/_templates/: README.md
docs/academy/: ko.md
docs/academy_discipline/: README.md  ko.md
docs/app/: ko.md
docs/arch/: README.md
docs/artificial(ity)/: README.md
docs/artificial_intelligence/: README.md
docs/blog/: ko.md
docs/c (programming-language)/: README.md
docs/cert/: ko.md
docs/certificate/: README.md
docs/certification/: README.md  ko_kr.md
docs/code/: README.md  ko.md
docs/code_rs/: README.md
main/: CMakeLists.txt
rust/: README.md
rust-example/: README.md
rust-example/dynamic-web/date-socket/rust-wasm/: Cargo.toml
rust-hello/: README.md  main.rs
util/: cmake.sh  rustc.sh  sync.sh
www/: index.html
(+133 files in other folders)
